--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,17 @@
 see https://www.joshwcomeau.com/css/custom-css-reset/
 */
 
-html {
-    scroll-behavior: smooth;
-}
-
 /* 1. Box-sizing model */
 *, *::before, *::after {
     box-sizing: border-box;
 }
+
+html {
+    scroll-behavior: smooth;
+    /* 3. Enable keyword animations */
+    interpolate-size: allow-keywords;
+}
+
 
 * {
     /* 2. Remove default margin */
